Fix explorersatlas